feat(ai-chat): 챗봇 범용화 1차 — 키워드 게이트 강등 + 제약 파싱 + 실데이터 역제안
설계 원칙: 이해는 LLM(제약 구조화), 사실은 DB(최저가·최소 구성가), 실행은 기존 모듈.
키워드는 라우팅 권한을 잃고, 역제안 숫자는 전부 결정적 질의에서 나온다(환각 차단).

1) 키워드 게이트 강등 (BuildChatService.chat)
- 라우터 UNSUPPORTED가 더 이상 dead-end 즉답을 만들지 않는다 — "램을 바꿔줘" 같은
  mutation 사전 오인 문장이 캐시→시맨틱→LLM 제약 파서까지 흘러 실제 의도를 살린다.
- 티어 스냅샷/드래프트 완성/결정경로는 BUILD_RECOMMEND일 때만 (기존 성능 유지).
- LLM까지 불가한 환경에서는 우아한 거절: 기능 안내 + 바로 눌러볼 quickReplies 칩.

2) LLM 제약 파서 확장 (DefaultAiChatEngine)
- 플랜 스키마에 partConstraint 신설: category·minCapacityGb·minVramGb·minWattageW·
  quantity·maxBudgetWon. 시스템 프롬프트에 구조화 예시("램 32기가 20만원" 등) 추가.
- normalizePartConstraint로 유의미한 제약만 parsedContext에 전달.

3) 타당성 엔진 신설 (BuildChatFeasibilityService)
- cheapestMeeting(스펙 충족 최저가) / bestUnderBudget(예산 내 최상 스펙) /
  usageMinimumTotal(용도 인지 최소 구성가 — GPU 필수 용도 + AI_DEV VRAM 하한).
- BuildChatService가 직접 소유(JdbcTemplate 외 의존 없음).

4) 범용 역제안 4유형 (문구별 분기 없는 일반 알고리즘)
- 단일 부품+제약: "20만원으로 32GB RAM 어려움 → 최저가 X원(제품명), Y원 부족,
  예산 내 대안 Z" + 재요청 칩 (PART_BUDGET_SHORTFALL / PART_CONSTRAINT_NOT_FOUND)
- 용도 인지 예산: "AI 학습용은 GPU 필수, 실계산 최소 약 N원부터" + 조정 칩
  (BUDGET_BELOW_USAGE_MINIMUM)
- 부품 변경: 즉시 반영 금지 — 변경 반영 전체 구성을 재검증한 "변경 적용 미리보기"
  카드(총액 delta 명시). 카드 적용 = 기존 REPLACE 전체 적용이라 안전.
- 범위 밖: dead-end 제거, 기능 칩과 함께 거절.

프론트 변경 0줄 — 역제안은 기존 응답 계약(text+quickReplies+builds) 조합으로 렌더됨.
캐시 무효화: exact v20→v21, 시맨틱 라우터 버전 v2→v3.

검증: gradle 전체 통과(신규 시나리오 테스트 3종 포함: 부족액 역제안·용도 최소가·
변경 미리보기) · 웹 빌드 클린 · Playwright 214/214.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>